list more packages
ref #2

--- a/exercises/03_advanced.html
+++ b/exercises/03_advanced.html
@@ -338,14 +338,17 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </section>
 <section id="other-packages-in-the-redcap-ecosystem" class="level1">
 <h1>Other Packages in the REDCap Ecosystem</h1>
-<p>REDCapR &amp; REDCapTidier are just of of 10+ actively-developed packages.</p>
-<p><a href="https://redcap-tools.github.io/projects/">REDCap Tools</a> (redcap-tools.github.io/projects/) was created by a people to help inventory the evolving list of packages.</p>
-<p>The most relevant to this audience include</p>
+<p><a href="https://github.com/OuhscBbmc/REDCapR">REDCapR</a> &amp; <a href="https://github.com/CHOP-CGTInformatics/REDCapTidieR">REDCapTidier</a> are just of of 10+ actively-developed packages.</p>
+<p><a href="https://redcap-tools.github.io/projects/">REDCap Tools</a> (redcap-tools.github.io/) was created by a people to help inventory the evolving list of packages. Most people using the REDCap API are not REDCap admins, so they don’t have access to the Community forums.</p>
+<p>The most relevant packages to this audience include:</p>
 <ul>
-<li>redcapAPI for R: –recently handed from Ben Nutter to Vandy developers)</li>
-<li>TidyREDCap for R: –Raymond Balise of U Miami has fxs for scenarios we haven’t discussed today)</li>
-<li>PyCap: similar goals as REDCapR –maintained by Paul Widenhaim of CHOP)</li>
-<li>PHPCap: more focused on server tasks –maintained by Jim Mullen &amp; Andy Arenson of U Indiana</li>
+<li><a href="https://github.com/nutterb/redcapAPI">redcapAPI</a> for R: recently handed from Ben Nutter to Vandy developers</li>
+<li><a href="https://github.com/raymondbalise/tidyREDCap">tidyREDCap</a> for R: Raymond Balise of U Miami has fxs for scenarios we haven’t discussed today)</li>
+<li><a href="https://github.com/ubidi/REDCapDM">REDCapDM</a> for R: –João Carmezim</li>
+<li><a href="https://github.com/ctsit/redcapcustodian/">REDCap Custodian</a> for R: Philip Chase &amp; Kyle Chesney of U Florida</li>
+<li><a href="https://github.com/redcap-tools/PyCap">PyCap</a>: similar goals as REDCapR –maintained by Paul Widenhaim of CHOP</li>
+<li><a href="https://github.com/cctrbic/redcap-api">redcap-api</a> for C#: Michael Tran of VCU (inspired by Chris Nefcy)</li>
+<li><a href="https://github.com/iuredcap/phpcap">phpcap</a>: more focused on server tasks –maintained by Jim Mullen &amp; Andy Arenson of U Indiana</li>
 </ul>
 </section>
 
