--- a/exercises/03_advanced.html
+++ b/exercises/03_advanced.html
@@ -111,7 +111,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 <h2 class="anchored" data-anchor-id="strategy">Strategy</h2>
 <p>REDCapTidieR makes your life easier when you read from a project with longitudinal or repeating structures. It breaks down the calls for each part and hands you tidy rectangles with clean grains.</p>
 <p>But no package holds your hand for <em>writing</em> to REDCap. Instead you’ll need to create a tidy grain for each rectangle/data.frame, and upload each in a separate call.</p>
-<p>As described in the <a href="https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html">Retrieving Longitudinal and Repeating Structures</a> vignette, the best way to read and write data from projects with longitudinal/repeating elements is to break up the “block matrix” dataset into individual datasets. Each rectangle should have a coherent grain.</p>
+<p>As described in REDCapR’s <a href="https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html">Retrieving Longitudinal and Repeating Structures</a> vignette, the best way to read and write data from projects with longitudinal/repeating elements is to break up the “block matrix” dataset into individual datasets. Each rectangle should have a coherent grain.</p>
 <section id="steps" class="level3">
 <h3 class="anchored" data-anchor-id="steps">Steps</h3>
 <p>Following this strategy, we’ll write to the REDCap server in two distinct steps:</p>
